--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ code/school_loop/school_loop/x64/Debug/regex.obj
 *.tlog
 code/school_loop/x64/
 code/school_loop/school_loop/x64/
+code/school_loop/.vs/
