--- a/code/school_loop/school_loop/school_loop.vcxproj
+++ b/code/school_loop/school_loop/school_loop.vcxproj
@@ -127,7 +127,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="main.cpp" />
     <ClCompile Include="regex.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="login.h" />
+    <ClInclude Include="Moment.h" />
+    <ClInclude Include="User.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
