--- a/code/school_loop/school_loop/school_loop.vcxproj.filters
+++ b/code/school_loop/school_loop/school_loop.vcxproj.filters
@@ -23,14 +23,14 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="login.h">
-      <Filter>源文件</Filter>
-    </ClInclude>
     <ClInclude Include="Moment.h">
-      <Filter>源文件</Filter>
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="login.h">
+      <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="User.h">
-      <Filter>源文件</Filter>
+      <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
