--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ code/school_loop/school_loop/x64/Debug/regex.obj
 code/school_loop/x64/
 code/school_loop/school_loop/x64/
 code/school_loop/.vs/
+code/school_loop/.vs/school_loop/v17/.suo
+code/school_loop/.vs/school_loop/v17/.suo
+code/school_loop/.vs/school_loop/v17/Browse.VC.db
