--- a/code/school_loop/school_loop/school_loop.vcxproj.filters
+++ b/code/school_loop/school_loop/school_loop.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="Moment.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Moment.h">
