--- a/code/school_loop/school_loop/school_loop.vcxproj
+++ b/code/school_loop/school_loop/school_loop.vcxproj
@@ -128,6 +128,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Moment.cpp" />
     <ClCompile Include="regex.cpp" />
   </ItemGroup>
   <ItemGroup>
