用户数据存储
增加注册账户的数据写入data文件夹功能

--- a/code/school_loop/school_loop/school_loop.vcxproj
+++ b/code/school_loop/school_loop/school_loop.vcxproj
@@ -129,7 +129,9 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Moment.cpp" />
-    <ClCompile Include="regex.cpp" />
+    <ClCompile Include="regex.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="addfriend.h" />
