--- a/code/school_loop/school_loop/school_loop.vcxproj
+++ b/code/school_loop/school_loop/school_loop.vcxproj
@@ -127,18 +127,19 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="login.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Moment.cpp" />
     <ClCompile Include="regex.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
     </ClCompile>
+    <ClCompile Include="tools.cpp" />
+    <ClCompile Include="User.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="addfriend.h" />
     <ClInclude Include="login.h" />
     <ClInclude Include="Moment.h" />
-    <ClInclude Include="Postonmoments.h" />
-    <ClInclude Include="Seefriendcircle.h" />
+    <ClInclude Include="tools.h" />
     <ClInclude Include="User.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
