--- a/code/school_loop/school_loop/school_loop.vcxproj.filters
+++ b/code/school_loop/school_loop/school_loop.vcxproj.filters
@@ -24,6 +24,15 @@
     <ClCompile Include="Moment.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="login.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="User.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="tools.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Moment.h">
@@ -35,13 +44,7 @@
     <ClInclude Include="User.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="addfriend.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="Postonmoments.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="Seefriendcircle.h">
+    <ClInclude Include="tools.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
